# openllm

./: .env.example  ARCHITECTURE.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  run_onprem.py
app/: auth.py  config.py  main.py  models.py  nats_router.py  storage.py  workspace.py
app/engine/: pipeline.py  presidio_engine.py  translator.py
app/routes/: anonymize.py  auth_routes.py  chat.py  dashboard.py  files.py  health.py  portal.py  translate.py  workspaces.py
nats/: Dockerfile  docker-entrypoint.sh  nats-server.conf  railway.toml
